--- a/snake/Makefile
+++ b/snake/Makefile
@@ -2,7 +2,7 @@ APP=esdeel02
 
 CXX      = clang++
 LIBS     = -lm -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer -lpthread
-CXXFLAGS =  -std=c++17 -Wall -Wc++17-extensions -MD
+CXXFLAGS =  -std=c++17 -Wall -Wc++17-extensions -MD -g
 LDFLAGS  = $(CXXFLAGS) $(LIBS) -L./lib
 
 # Folders
@@ -18,9 +18,6 @@ $(BIN_DIR)/$(APP): $(OBJECTS)
 
 $(OBJECTS): $(OBJ_DIR)/%.o : $(SRC_DIR)/%.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
-
-debug: CXXFLAGS += -DDEBUG -g
-debug: $(BIN_DIR)/$(APP) 
 
 clean:
 	$(RM) build/obj/* build/bin/*
